starting users and accounts

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+# ignore IDE
+.idea
+
 # Ignore bundler config.
 /.bundle
 
@@ -17,3 +20,8 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# environment
+.ruby-version
+.ruby-gemset
+.env
