trying create and migrate

--- a/app.json
+++ b/app.json
@@ -21,6 +21,6 @@
     }
   },
   "scripts": {
-    "postdeploy": "bundle exec rake db:setup"
+    "postdeploy": "bundle exec rake db:create && bundle exec rake db:migrate"
   }
 }
