downgrade heroku stack for older ruby

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "name": "mock-simple-aspsp",
   "description": "A mock OpenBanking ASPSP API server",
+  "stack": "heroku-18",
   "buildpacks": [
     {
       "url": "heroku/ruby"
